Fix issue #7