@@ -1,2 +1,2 @@
-java -jar -Xmx2048m target\viz-engine-jogl-demo-1.0.0-SNAPSHOT.jar %*
+java --add-exports java.base/java.lang=ALL-UNNAMED  --add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.desktop/sun.java2d=ALL-UNNAMED -jar -Xmx2048m target\viz-engine-jogl-demo-1.0.0-SNAPSHOT.jar %*
 pause
